fixed overflow on post container

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   width: 100vw;
   background-image: 
   url('https://freepikpsd.com/wp-content/uploads/2019/11/transparent-png-leaf-border-4-Images.png'),
-  url('./photos/woodplanks.jpg');
+  url('photos/woodplanks.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -84,6 +84,7 @@ main {
   justify-content: center;
   text-align: center;
   z-index: 1;
+  overflow: hidden;
   transition: width 2s, height 2s;
 }
 
@@ -108,6 +109,7 @@ main {
   font-size: 28px;
   margin: 20px;
   padding: 20px;
+  font-family: 'MedievalSharp', cursive;
 }
 
 .rotate-left {
